# walnut

./: README.md
alive-mcp/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
alive-mcp/docs/: error-codes.md  troubleshooting.md
alive-mcp/docs/release/: mcpb-install-verification.md
alive-mcp/mcpb/: README.md  manifest.json
alive-mcp/scripts/: build-mcpb.sh
alive-mcp/src/alive_mcp/: __init__.py  __main__.py  audit.py  envelope.py  errors.py  paths.py  server.py  uri.py  world.py
alive-mcp/src/alive_mcp/_vendor/: VENDORING.md  __init__.py  walnut_paths.py
alive-mcp/src/alive_mcp/_vendor/_pure/: __init__.py  project_pure.py  tasks_pure.py
alive-mcp/src/alive_mcp/resources/: __init__.py  kernel.py  subscriptions.py
alive-mcp/src/alive_mcp/tools/: log_and_tasks.py  search.py  walnut.py
alive-mcp/tests/: _test_helpers.py  test_audit.py  test_edge_cases.py  test_errors.py  test_integration.py  test_paths.py  test_resource_subscriptions.py  test_resources_kernel.py  test_server_bootstrap.py  test_tools_log_and_tasks.py  test_tools_search.py  test_tools_walnut.py  test_uri.py  test_vendor_smoke.py  test_version.py  test_world.py
alive-mcp/tests/fixtures/tiny/.alive/: key.md
alive-mcp/tests/fixtures/tiny/demo-walnut/_kernel/: key.md  log.md  tasks.json
alive-mcp/tests/fixtures/tiny/demo-walnut/demo-bundle/: context.manifest.yaml  tasks.json
alive-mcp/tests/fixtures/world-basic/.alive/: _index.json  preferences.yaml
alive-mcp/tests/fixtures/world-basic/02_Life/people/ben/_kernel/: insights.md  key.md  log.md  now.json
alive-mcp/tests/fixtures/world-basic/02_Life/people/sarah/_kernel/: insights.md  key.md  (+2 more)
alive-mcp/tests/fixtures/world-basic/04_Ventures/nova-station/_kernel/: insights.md  key.md  log.md  now.json
alive-mcp/tests/fixtures/world-basic/04_Ventures/nova-station/launch-checklist/: context.manifest.yaml  tasks.json
alive-mcp/tests/fixtures/world-basic/04_Ventures/nova-station/shielding-review/: context.manifest.yaml  tasks.json
(+36 files in other folders)
