[project]
name = "alive-mcp"
version = "0.1.0"
description = "Read-only Model Context Protocol server exposing the ALIVE Context System to MCP-capable agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Patrick Brosnan", email = "patrick@supernormalsystems.com" },
]
keywords = ["mcp", "alive", "context", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Python version pin rationale:
# - mcp>=1.27,<2.0 declares `Requires-Python: >=3.10` (no upper bound).
# - watchdog>=4 declares `Requires-Python: >=3.9`.
# - We cap at <3.14 to exclude the monorepo's system Python 3.14 (used for
#   plugin bytecode work). Contributors should use a pinned 3.10-3.13 env via
#   `uv python install 3.12 && uv venv --python 3.12`. 3.13 is ALLOWED — the
#   mcp SDK's Requires-Python has no upper bound. 3.14 is excluded until mcp
#   ships validated CI against it.
requires-python = ">=3.10,<3.14"

dependencies = [
    "mcp>=1.27,<2.0",
    "watchdog>=4",
]

[project.urls]
Homepage = "https://github.com/alivecontext/alive"
Repository = "https://github.com/alivecontext/alive"
Issues = "https://github.com/alivecontext/alive/issues"

[project.scripts]
alive-mcp = "alive_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alive_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/alive_mcp",
    "tests",
    "README.md",
    "pyproject.toml",
]
